--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   permission_handler: ^8.3.0
   path_provider: ^2.0.8
   android_path_provider: ^0.3.0
+  flutter_typeahead: ^4.0.0
 
 dev_dependencies:
   flutter_test:
