--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   path_provider: ^2.0.8
   android_path_provider: ^0.3.0
   flutter_typeahead: ^4.0.0
+  tree_view: ^0.0.6
 
 dev_dependencies:
   flutter_test:
