--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_typeahead: ^4.0.0
   tree_view: ^0.0.6
   flutter_html: ^2.2.1
+  in_app_review: ^2.0.4
 
 dev_dependencies:
   flutter_test:
