--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,24 @@ dependencies:
   flutter_html: ^2.2.1
   in_app_review: ^2.0.4
   time_range_picker: ^2.2.0
+  flutter_launcher_icons: ^0.10.0
+  shake: ^2.0.0
+  flutter_share: ^2.0.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "assets/logo_launcher.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: false
+    image_path: "path/to/image.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: false
+    image_path: "path/to/image.png"
+    icon_size: 48 # min:48, max:256, default: 48
 
 dev_dependencies:
   flutter_test:
