--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_launcher_icons: ^0.10.0
   shake: ^2.0.0
   flutter_share: ^2.0.0
+  image_picker: ^0.8.6
+  open_file: ^3.2.1
 
 flutter_icons:
   android: "launcher_icon"
