--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   open_file: ^3.2.1
   get: ^4.6.5
   pin_code_fields: ^7.4.0
+  carousel_slider: ^4.1.1
 
 flutter_icons:
   android: "launcher_icon"
