--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.6.5
   pin_code_fields: ^7.4.0
   carousel_slider: ^4.1.1
+  cached_network_image: ^3.2.2
 
 flutter_icons:
   android: "launcher_icon"
