--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   pin_code_fields: ^7.4.0
   carousel_slider: ^4.1.1
   cached_network_image: ^3.2.2
+  photo_view: ^0.14.0
 
 flutter_icons:
   android: "launcher_icon"
