--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   carousel_slider: ^4.1.1
   cached_network_image: ^3.2.2
   photo_view: ^0.14.0
+  smooth_page_indicator: ^1.0.0+2
 
 flutter_icons:
   android: "launcher_icon"
