--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cached_network_image: ^3.2.2
   photo_view: ^0.14.0
   smooth_page_indicator: ^1.0.0+2
+  fluttertoast: ^8.1.2
 
 flutter_icons:
   android: "launcher_icon"
