--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   photo_view: ^0.14.0
   smooth_page_indicator: ^1.0.0+2
   fluttertoast: ^8.1.2
+  webview_flutter: ^2.8.0
 
 flutter_icons:
   android: "launcher_icon"
