--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   fluttertoast: ^8.1.2
   webview_flutter: ^2.8.0
+  infinite_scroll_pagination: ^3.2.0
+  pull_to_refresh: ^2.0.0
 
 flutter_icons:
   android: "launcher_icon"
