--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   webview_flutter: ^2.8.0
   infinite_scroll_pagination: ^3.2.0
   pull_to_refresh: ^2.0.0
+  firebase_messaging: ^6.0.13
 
 flutter_icons:
   android: "launcher_icon"
