--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,10 @@ dependencies:
   webview_flutter: ^2.8.0
   infinite_scroll_pagination: ^3.2.0
   pull_to_refresh: ^2.0.0
-  firebase_messaging: ^6.0.13
+  firebase_messaging: ^14.6.7
+  firebase_core: ^2.15.1
+  awesome_notifications_fcm: ^0.7.4+1
+  awesome_notifications: ^0.7.4+1
 
 flutter_icons:
   android: "launcher_icon"
