--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   open_file: ^3.2.1
   get: ^4.6.5
   pin_code_fields: ^7.4.0
-  carousel_slider: ^4.1.1
+  carousel_slider: ^4.2.1
   cached_network_image: ^3.2.2
   photo_view: ^0.14.0
   smooth_page_indicator: ^1.0.0+2
@@ -51,6 +51,7 @@ dependencies:
   awesome_notifications_fcm: ^0.7.4+1
   awesome_notifications: ^0.7.4+1
   google_fonts: ^4.0.4
+  dropdown_button2: ^2.1.4
 
 flutter_icons:
   android: "launcher_icon"
